[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ati_ft_sensor_tcp"
version = "0.0.3"
authors = [
  { name="Loukas Kordos", email="placeholder@example.com" },
]
description = "A TCP Driver for ATI NetFT force torque sensor"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/ati-ft-sensor-tcp"
Issues = "https://github.com/LouKordos/ati-ft-sensor-tcp/issues"